--- a/.github/workflows/build_action.yml
+++ b/.github/workflows/build_action.yml
@@ -1,5 +1,8 @@
 name: Build
 
+permissions:
+  contents: write
+
 on:
   push:
     tags:
@@ -37,4 +40,5 @@ jobs:
     - name: Create GitHub release
       uses: softprops/action-gh-release@v1
       with:
+        generate_release_notes: true
         files: TrayWP-${{ matrix.architecture }}.zip
